@@ -1,3 +1,9 @@
+2012-01-19  Vanessa Gil  <vanessa.gil@artica.es>
+
+	* include/functions_agents.php
+	  operation/agentes/estado_monitores.php: Counter modified to ignore
+	disabled modules.
+
 2012-01-12  Junichi Satoh  <junichi@rworks.jp>
 
 	* godmode/admin_access_logs.php: Merged from trunk. Fixed user
